unpackaged/main/default/objects/Knowledge_Resource_Recommendation__c/Knowledge_Resource_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Knowledge Resource Recommendation</label>
    <nameField>
        <label>Knowledge Resource Recommendation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Resource Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>