unpackaged/main/default/objects/Knowledge_Resource_Recommendation__c/fields/Community_Topics__c.field-meta.xml
<CustomField>
    <fullName>Community_Topics__c</fullName>
    <description>not for display on the Knowledge Resource Recommendation page, used to power picklist options in flows.</description>
    <label>Community Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Community_Topics</valueSetName>
    </valueSet>
</CustomField>