unpackaged/main/default/objects/Knowledge_Resource_Recommendation__c/fields/Knowledge_SubCategories__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_SubCategories__c</fullName>
    <description>Not for use on this record, for reference by a flow.</description>
    <label>Knowledge SubCategories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Knowledge_SubCategories</valueSetName>
    </valueSet>
</CustomField>