unpackaged/main/default/objects/Knowledge_Resource_Recommendation__c/fields/Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>Resource_URL__c</fullName>
    <description>To store recommendation, resource URL</description>
    <label>Resource URL</label>
    <type>Url</type>
</CustomField>