unpackaged/main/default/objects/Knowledge_Resource_Recommendation__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To hold related person account who submitted the recommendation.</description>
    <label>Submitted By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Knowledge Resource Recommendations</relationshipLabel>
    <relationshipName>Knowledge_Resource_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>